--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -550,15 +550,20 @@
   "command.vampirism.base.changelog.newversion": "There is no new version available",
   "command.vampirism.base.bind_action.success": "Successfully bound action %s to action key %s",
   "command.vampirism.base.bind_action.not_existing": "The given action %s does not exist",
-  "command.vampirism.base.bind_action.help": "You can bind custom actions (e.g. bat mode) to the two available action keys (see keybindings). Use tab to see available actions.",
+  "command.vampirism.base.bind_action.help": "You can bind custom actions (e.g. bat mode) to the two available action keys (see keybindings).",
   "command.vampirism.test.gen_debug.true": "Enabled Worldgen Debug",
   "command.vampirism.test.gen_debug.false": "Disabled Worldgen Debug",
+  "command.vampirism.test.skill.enabled": "Successfully enabled skill %s",
   "command.vampirism.test.skill.alreadyenabled": "Skill is already enabled (%s)",
   "command.vampirism.test.skill.parent": "Parent Skill must be enabled (%s)",
   "command.vampirism.test.skill.parents": "Parent Skill must be enabled (%s or %s)",
   "command.vampirism.test.skill.nopoints": "No skill points remaining",
   "command.vampirism.test.skill.othernode": "The other skill is enabled",
   "command.vampirism.test.skill.otherfaction": "Your faction doesn't permit this skill",
+  "command.vampirism.argument.skill.notfound": "The given skill %s does not exist",
+  "command.vampirism.argument.action.notfound": "The given action %s does not exist",
+  "command.vampirism.argument.faction.notfound": "The given faction %s does not exist",
+  "command.vampirism.argument.faction.notplayable": "You can not play as %s",
   "__comment": "commands_old",
   "command.vampirism.base.vampire_biome.parse_dist": "Failed to parse max distance. Using %s.",
   "__comment": "entities",
