#425 static actions & red color for unavailable actions closes #393 fixed all problems with the skillscreen (not the skills) renamed translation keys for skills & actions skills & actions now have there own textures and not an atlas

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -1,89 +1,4 @@
 {
-  "text.vampirism.skills.gui_title": "Your skills",
-  "text.vampirism.skills.points_left": "%d skill point(s) left",
-  "text.vampirism.skill.resetall": "Reset skills",
-  "text.vampirism.skill.unlocked": "Unlocked",
-  "text.vampirism.skill.unlocks_action": "Unlocks action",
-  "text.vampirism.skill.unlock_parent_first": "Unlock parent first",
-  "text.vampirism.skill.skills_reset": "Your skills have been reset",
-  "text.vampirism.skill.deactivated_by_serveradmin": "This skill is deactivated by your serveradmin",
-  "text.vampirism.skill.ivampireplayer": "Becoming a vampire",
-  "text.vampirism.skill.avoided_by_creepers": "Avoided by creepers",
-  "text.vampirism.skill.blood_vision": "Blood vision",
-  "text.vampirism.skill.blood_vision.desc": "Allows you to see entities through walls in the dark. Toggle with key.",
-  "text.vampirism.skill.poisonous_bite": "Poisonous Teeth",
-  "text.vampirism.skill.poisonous_bite.desc": "Poisons the creatures you bite",
-  "text.vampirism.skill.advanced_biter": "Advanced biter",
-  "text.vampirism.skill.advanced_biter.desc": "Allows you to suck blood more efficiently and stop at the right moment. Also increases you bite damage.",
-  "text.vampirism.skill.more_bite_damage": "Hardened Teeth",
-  "text.vampirism.skill.more_bite_damage.desc": "Deal more damage when biting",
-  "text.vampirism.skill.less_blood_thirst": "Frugal vampire",
-  "text.vampirism.skill.less_blood_thirst.desc": "Decreases your thirst for blood",
-  "text.vampirism.skill.less_garlicdamage": "Reduce garlic damage",
-  "text.vampirism.skill.less_sundamage": "Reduce sun damage",
-  "text.vampirism.skill.night_vision": "Night Vision",
-  "text.vampirism.skill.disguise": "Disguise",
-  "text.vampirism.skill.vampire_forest_fog": "Vista",
-  "text.vampirism.skill.vampire_forest_fog.desc": "Increase the fog distance in the Vampire Forest",
-  "text.vampirism.skill.water_resistance": "Water Resistance",
-  "text.vampirism.skill.water_resistance.desc": "Your body will not be weakened by water anymore",
-  "text.vampirism.skill.blood_charge": "Blood Charge",
-  "text.vampirism.skill.blood_charge.desc": "Charge your blood using tools on the go by sneak right clicking.",
-  "text.vampirism.skill.sword_finisher": "Finisher",
-  "text.vampirism.skill.sword_finisher.desc": "Instantly kill any non vampire that has below %s percent of his max health using a vampire sword",
-  "text.vampirism.skill.half_invulnerable.desc": "Action that temporarily blocks high value damages but consumes blood for that",
-  "text.vampirism.skill.freeze.desc": "Temporarily freeze all nearby creatures",
-  "text.vampirism.skill.vampire_rage.desc": "Action that gives you a speed and damage boost on cost of increased blood usage",
-  "text.vampirism.skill.summon_bats.desc": "Summon a lot of bats around you while in bat mode to distract enemies",
-  "text.vampirism.skill.sunscreen.desc": "Grants temporary immunity from direct sundamage. Has a long cooldown.",
-  "text.vampirism.skill.garlic_blood_vision": "Garlic blood vision",
-  "text.vampirism.skill.garlic_blood_vision.desc": "Allows you to additionally detect entities with poisonous blood",
-  "text.vampirism.skill.ihunterplayer": "Becoming an hunter",
-  "text.vampirism.skill.hunter_attack_speed": "Increased Attack Speed",
-  "text.vampirism.skill.weapon_table": "Hunter Weapon Table",
-  "text.vampirism.skill.weapon_table.desc": "Learn how to use the Hunter Weapon Table",
-  "text.vampirism.skill.double_crossbow": "Double It",
-  "text.vampirism.skill.double_crossbow.desc": "Unlocks Double Crossbow",
-  "text.vampirism.skill.enhanced_crossbow": "Enhanced Crossbows",
-  "text.vampirism.skill.enhanced_crossbow.desc": "Learn how to enhance your crossbows",
-  "text.vampirism.skill.hunter_advanced_attack_speed": "Attack swift as the wind",
-  "text.vampirism.skill.hunter_advanced_attack_speed.desc": "Increase your attack speed even more",
-  "text.vampirism.skill.stake1": "How to use a stake",
-  "text.vampirism.skill.stake1.desc": "Instantly kill any vampire that has below %s percent of his max health with a stake",
-  "text.vampirism.skill.stake2": "How to actually use a stake",
-  "text.vampirism.skill.stake2.desc_all": "Instantly kill any vampire from behind with a stake as long as his max health is below %s",
-  "text.vampirism.skill.stake2.desc_npc": "Instantly kill any vampire NPC from behind with a stake as long as his max health is below %s",
-  "text.vampirism.skill.blood_potion_table": "Blood Potion Table",
-  "text.vampirism.skill.blood_potion_table.desc": "Learn how to use the Blood Potion Table to create potions from vampire blood",
-  "text.vampirism.skill.blood_potion_good_or_bad": "Good or Bad?",
-  "text.vampirism.skill.blood_potion_good_or_bad.desc": "Find out how many bad effects your blood potions have",
-  "text.vampirism.skill.blood_potion_less_bad": "Improved Brewing",
-  "text.vampirism.skill.blood_potion_less_bad.desc": "Lower the chance of getting bad effects",
-  "text.vampirism.skill.blood_potion_category_hint": "Experienced brewer",
-  "text.vampirism.skill.blood_potion_category_hint.desc": "Get a hint what your extra item might effect",
-  "text.vampirism.skill.blood_potion_faster_crafting": "Swift brewing",
-  "text.vampirism.skill.blood_potion_duration": "Improved response",
-  "text.vampirism.skill.blood_potion_duration.desc": "Your body response better to the potions which makes them operate longer",
-  "text.vampirism.skill.blood_potion_portable_crafting": "Brewing on the go",
-  "text.vampirism.skill.blood_potion_portable_crafting.desc": "Learn how to brew blood potions without a Blood Potion Table",
-  "text.vampirism.skill.blood_potion_identify_some": "Brewing master",
-  "text.vampirism.skill.blood_potion_identify_some.desc": "Get to know some of the effects of a blood potion",
-  "text.vampirism.skill.tech_weapons": "Technology",
-  "text.vampirism.skill.tech_weapons.desc": "Learn how to build some advanced weapons",
-  "text.vampirism.skill.enhanced_armor": "Enhanced armor",
-  "text.vampirism.skill.enhanced_weapons": "Enhanced weapons",
-  "text.vampirism.skill.disguise_hunter.desc": "Allows you to hide from mobs and become far less visible to other players",
-  "text.vampirism.skill.basic_alchemy": "Basic Alchemy",
-  "text.vampirism.skill.basic_alchemy.desc": "Learn how to use the Alchemical Cauldron to craft awesome things.",
-  "text.vampirism.skill.garlic_beacon": "Vampire repelling",
-  "text.vampirism.skill.garlic_beacon.desc": "Learn how to craft a garlic diffuser to keep those vampires away.",
-  "text.vampirism.skill.purified_garlic": "Purified Garlic",
-  "text.vampirism.skill.purified_garlic.desc": "Purify your garlic to increase it's effect. Boost your garlic diffusor with it.",
-  "text.vampirism.skill.holy_water_enhanced": "Enhanced Holy Water",
-  "text.vampirism.skill.holy_water_enhanced.desc": "Create enhanced Holy Water instead of normal one.",
-  "text.vampirism.skill.garlic_beacon_improved": "Improved diffuser",
-  "text.vampirism.skill.garlic_beacon_improved.desc": "Learn how to craft a garlic diffuser with a higher range",
-  "text.vampirism.skill.awareness": "Sense nearby vampire players or entities",
   "text.vampirism.command.available_subcommands": "Available Subcommands:",
   "text.vampirism.command.subcommand_help": "Use '/%s help <subcommand>' to get more information",
   "text.vampirism.command.usage": "/%s <subcommand> <params> | Use /%s help to get all available subcommands",
@@ -92,20 +7,6 @@
   "text.vampirism.action.deactivated_by_serveradmin": "This action is deactivated by your serveradmin",
   "text.vampirism.action.not_bound": "No action is bound to this key. See %s.",
   "text.vampirism.action.only_faction": "This action can only be used by players of %s faction",
-  "action.vampirism.vampire.bat_skill": "Toggle Batmode",
-  "action.vampirism.vampire.freeze": "Freeze",
-  "action.vampirism.vampire.invisibility": "Invisibility",
-  "action.vampirism.vampire.regen": "Regeneration",
-  "action.vampirism.vampire.revive_fallen": "Revive Fallen",
-  "action.vampirism.vampire.summon_bats": "Summon Bats",
-  "action.vampirism.vampire.teleport": "Teleport",
-  "action.vampirism.vampire.vampire_rage": "Vampire Rage",
-  "action.vampirism.vampire.sunscreen": "Sunscreen",
-  "action.vampirism.vampire.disguise": "Disguise",
-  "action.vampirism.vampire.dark_blood_projectile": "Dark Blood Projectile",
-  "action.vampirism.vampire.halfinvulnerable_skill": "Damage Limiter",
-  "action.vampirism.hunter.disguise": "Disguise",
-  "action.vampirism.hunter.awareness": "Vampire Awareness",
   "text.vampirism.blood_potion.might_cause": "Might cause:",
   "text.vampirism.blood_potion.any_effect": "No special effect",
   "text.vampirism.blood_potion.category.normal_body_boost": "Improved body fitness",
@@ -323,6 +224,137 @@
   "category.vampirism.gui": "GUI Configuration",
   "category.vampirism.gui.tooltip": "Configure display",
   "category.vampirism.worldgen": "World Generation",
+  "__comment": "actions",
+  "action.vampirism.bat": "Toggle Batmode",
+  "action.vampirism.freeze": "Freeze",
+  "action.vampirism.vampire_invisibility": "Invisibility",
+  "action.vampirism.regen": "Regeneration",
+  "action.vampirism.revive_fallen": "Revive Fallen",
+  "action.vampirism.summon_bat": "Summon Bats",
+  "action.vampirism.teleport": "Teleport",
+  "action.vampirism.vampire_rage": "Vampire Rage",
+  "action.vampirism.sunscreen": "Sunscreen",
+  "action.vampirism.disguise_vampire": "Disguise",
+  "action.vampirism.disguise_hunter": "Disguise",
+  "action.vampirism.dark_blood_projectile": "Dark Blood Projectile",
+  "action.vampirism.half_invulnerable": "Damage Limiter",
+  "action.vampirism.awareness_hunter": "Vampire Awareness",
+  "__comment": "skills",
+  "skill.vampirism.vampire": "Becoming a vampire",
+  "skill.vampirism.creeper_avoided": "Avoided by creepers",
+  "skill.vampirism.blood_vision": "Blood vision",
+  "skill.vampirism.poisonous_bite": "Poisonous Teeth",
+  "skill.vampirism.poisonous_bite.desc": "Poisons the creatures you bite",
+  "skill.vampirism.advanced_biter": "Advanced biter",
+  "skill.vampirism.more_bite_damage": "Hardened Teeth",
+  "skill.vampirism.less_blood_thirst": "Frugal vampire",
+  "skill.vampirism.less_garlicdamage": "Reduce garlic damage",
+  "skill.vampirism.less_sundamage": "Reduce sun damage",
+  "skill.vampirism.night_vision": "Night Vision",
+  "skill.vampirism.disguise": "Disguise",
+  "skill.vampirism.vampire_forest_fog": "Vista",
+  "skill.vampirism.water_resistance": "Water Resistance",
+  "skill.vampirism.blood_charge": "Blood Charge",
+  "skill.vampirism.sword_finisher": "Finisher",
+  "skill.vampirism.garlic_blood_vision": "Garlic blood vision",
+  "skill.vampirism.hunter": "Becoming an hunter",
+  "skill.vampirism.hunter_attack_speed": "Increased Attack Speed",
+  "skill.vampirism.weapon_table": "Hunter Weapon Table",
+  "skill.vampirism.double_crossbow": "Double It",
+  "skill.vampirism.enhanced_crossbow": "Enhanced Crossbows",
+  "skill.vampirism.hunter_advanced_attack_speed": "Attack swift as the wind",
+  "skill.vampirism.stake1": "How to use a stake",
+  "skill.vampirism.stake2": "How to actually use a stake",
+  "skill.vampirism.blood_potion_table": "Blood Potion Table",
+  "skill.vampirism.blood_potion_good_or_bad": "Good or Bad?",
+  "skill.vampirism.blood_potion_less_bad": "Improved Brewing",
+  "skill.vampirism.blood_potion_category_hint": "Experienced brewer",
+  "skill.vampirism.blood_potion_faster_crafting": "Swift brewing",
+  "skill.vampirism.blood_potion_duration": "Improved response",
+  "skill.vampirism.blood_potion_portable_crafting": "Brewing on the go",
+  "skill.vampirism.blood_potion_identify_some": "Brewing master",
+  "skill.vampirism.tech_weapons": "Technology",
+  "skill.vampirism.enhanced_armor": "Enhanced armor",
+  "skill.vampirism.enhanced_weapons": "Enhanced weapons",
+  "skill.vampirism.basic_alchemy": "Basic Alchemy",
+  "skill.vampirism.garlic_beacon": "Vampire repelling",
+  "skill.vampirism.purified_garlic": "Purified Garlic",
+  "skill.vampirism.holy_water_enhanced": "Enhanced Holy Water",
+  "skill.vampirism.garlic_beacon_improved": "Improved diffuser",
+  "skill.vampirism.awareness": "Sense nearby vampire players or entities",
+  "__comment": "skill_desc",
+  "skill.vampirism.freeze.desc": "Temporarily freeze all nearby creatures",
+  "skill.vampirism.blood_vision.desc": "Allows you to see entities through walls in the dark. Toggle with key.",
+  "skill.vampirism.advanced_biter.desc": "Allows you to suck blood more efficiently and stop at the right moment. Also increases you bite damage.",
+  "skill.vampirism.more_bite_damage.desc": "Deal more damage when biting",
+  "skill.vampirism.less_blood_thirst.desc": "Decreases your thirst for blood",
+  "skill.vampirism.vampire_forest_fog.desc": "Increase the fog distance in the Vampire Forest",
+  "skill.vampirism.water_resistance.desc": "Your body will not be weakened by water anymore",
+  "skill.vampirism.blood_charge.desc": "Charge your blood using tools on the go by sneak right clicking.",
+  "skill.vampirism.sword_finisher.desc": "Instantly kill any non vampire that has below %s percent of his max health using a vampire sword",
+  "skill.vampirism.half_invulnerable.desc": "Action that temporarily blocks high value damages but consumes blood for that",
+  "skill.vampirism.vampire_rage.desc": "Action that gives you a speed and damage boost on cost of increased blood usage",
+  "skill.vampirism.summon_bats.desc": "Summon a lot of bats around you while in bat mode to distract enemies",
+  "skill.vampirism.sunscreen.desc": "Grants temporary immunity from direct sundamage. Has a long cooldown.",
+  "skill.vampirism.garlic_blood_vision.desc": "Allows you to additionally detect entities with poisonous blood",
+  "skill.vampirism.weapon_table.desc": "Learn how to use the Hunter Weapon Table",
+  "skill.vampirism.double_crossbow.desc": "Unlocks Double Crossbow",
+  "skill.vampirism.enhanced_crossbow.desc": "Learn how to enhance your crossbows",
+  "skill.vampirism.hunter_advanced_attack_speed.desc": "Increase your attack speed even more",
+  "skill.vampirism.stake1.desc": "Instantly kill any vampire that has below %s percent of his max health with a stake",
+  "skill.vampirism.stake2.desc_all": "Instantly kill any vampire from behind with a stake as long as his max health is below %s",
+  "skill.vampirism.stake2.desc_npc": "Instantly kill any vampire NPC from behind with a stake as long as his max health is below %s",
+  "skill.vampirism.blood_potion_table.desc": "Learn how to use the Blood Potion Table to create potions from vampire blood",
+  "skill.vampirism.blood_potion_good_or_bad.desc": "Find out how many bad effects your blood potions have",
+  "skill.vampirism.blood_potion_less_bad.desc": "Lower the chance of getting bad effects",
+  "skill.vampirism.blood_potion_category_hint.desc": "Get a hint what your extra item might effect",
+  "skill.vampirism.blood_potion_duration.desc": "Your body response better to the potions which makes them operate longer",
+  "skill.vampirism.blood_potion_portable_crafting.desc": "Learn how to brew blood potions without a Blood Potion Table",
+  "skill.vampirism.blood_potion_identify_some.desc": "Get to know some of the effects of a blood potion",
+  "skill.vampirism.tech_weapons.desc": "Learn how to build some advanced weapons",
+  "skill.vampirism.disguise_hunter.desc": "Allows you to hide from mobs and become far less visible to other players",
+  "skill.vampirism.basic_alchemy.desc": "Learn how to use the Alchemical Cauldron to craft awesome things.",
+  "skill.vampirism.garlic_beacon.desc": "Learn how to craft a garlic diffuser to keep those vampires away.",
+  "skill.vampirism.purified_garlic.desc": "Purify your garlic to increase it's effect. Boost your garlic diffusor with it.",
+  "skill.vampirism.holy_water_enhanced.desc": "Create enhanced Holy Water instead of normal one.",
+  "skill.vampirism.garlic_beacon_improved.desc": "Learn how to craft a garlic diffuser with a higher range",
+  "__comment": "interaction",
+  "text.vampirism.hunter_trainer.trainer_level_wrong": "This trainer cannot train you at your level",
+  "text.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
+  "text.vampirism.alchemical_cauldron.cannot_use": "You have not learned how to use this",
+  "text.vampirism.altar_infusion.ritual_missing_times": "You are missing items for this ritual",
+  "text.vampirism.altar_infusion.ritual_structure_wrong": "The structure is wrong for this ritual",
+  "text.vampirism.altar_infusion.ritual_level_wrong": "You cannot use this altar at this level",
+  "text.vampirism.altar_infusion.ritual_still_running": "The ritual is still running",
+  "text.vampirism.altar_infusion.ritual_night_only": "You can only perform this ritual at night",
+  "text.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
+  "text.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
+  "__comment": "container/tileentity/screen",
+  "tile.vampirism.blood_grinder": "Blood Grinder",
+  "tile.vampirism.alchemical_cauldron": "Alchemical Cauldron",
+  "tile.vampirism.altar_infusion": "Altar of Infusion",
+  "container.vampirism.hunter_weapon_table.name": "Weapon Table",
+  "container.hunter": "Hunter",
+  "container.hunter_table": "Hunter Table",
+  "container.huntertrainer": "Hunter Trainer",
+  "__comment": "container/tileentity/screen_text",
+  "text.vampirism.skills.gui_title": "Your skills",
+  "text.vampirism.skills.points_left": "%d skill point(s) left",
+  "text.vampirism.skill.resetall": "Reset skills",
+  "text.vampirism.skill.unlocked": "Unlocked",
+  "text.vampirism.skill.unlocks_action": "Unlocks action",
+  "text.vampirism.skill.unlock_parent_first": "Unlock parent first",
+  "text.vampirism.skill.skills_reset": "Your skills have been reset",
+  "text.vampirism.skill.deactivated_by_serveradmin": "This skill is deactivated by your serveradmin",
+  "container.vampirism.hunter_table.ritual_level_wrong": "You cannot use this altar at this level",
+  "container.vampirism.basic_hunter.levelup": "I hope you have learned something",
+  "tile.vampirism.alchemical_cauldron.display": "%s's %s",
+  "text.vampirism.level_up": "Level Up",
+  "text.vampirism.hunter_table.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+  "text.vampirism.altar_infusion.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+  "text.vampirism.hunter_trainer.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
+  "__comment": "biome",
+  "biome.vampirism.vampire_forest": "Vampire Forest",
   "__comment": "text",
   "text.vampirism.update_message": "[\"Click for... [\",{\"text\":\"Download\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the download page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@download@\"}},\"] [\",{\"text\":\"Website\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the mod's forum page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@forum@\"}},\"] [\",{\"text\":\"Changelog\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this see the version's Changelog\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"run_command\",\"value\":\"/vampirism changelog\"}},\"]\"]",
   "__comment": "blocks",
