--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -189,6 +189,7 @@
   "text.vampirism.integrations_available.second": "[\"Please consider downloading this mod for an improved experience [\",{\"text\":\"Download\",\"color\":\"green\",\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"Click this to go to the mod page\",\"color\":\"green\"}},\"clickEvent\":{\"action\":\"open_url\",\"value\":\"@download@\"}},\"]\"]",
   "text.vampirism.trainer_disabled": "I am not a hunter",
   "text.vampirism.trainer_disabled_hunter": "It is not safe enought to train you here. Please free the village.",
+  "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
   "category.vampirism.balance": "Balance settings",
   "category.vampirism.balance.tooltip": "Change almost any balance relevant property",
   "category.vampirism.balance_general": "General",
@@ -218,36 +219,7 @@
   "category.vampirism.gui": "GUI Configuration",
   "category.vampirism.gui.tooltip": "Configure display",
   "category.vampirism.worldgen": "World Generation",
-  "__comment": "interaction",
-  "text.vampirism.hunter_trainer.trainer_level_wrong": "This trainer cannot train you at your level",
-  "text.vampirism.alchemical_cauldron.other": "This cauldron belongs to %s. You should not use it.",
-  "text.vampirism.alchemical_cauldron.cannot_use": "You have not learned how to use this",
-  "text.vampirism.altar_infusion.ritual_missing_times": "You are missing items for this ritual",
-  "text.vampirism.altar_infusion.ritual_structure_wrong": "The structure is wrong for this ritual",
-  "text.vampirism.altar_infusion.ritual_level_wrong": "You cannot use this altar at this level",
-  "text.vampirism.altar_infusion.ritual_still_running": "The ritual is still running",
-  "text.vampirism.altar_infusion.ritual_night_only": "You can only perform this ritual at night",
-  "text.vampirism.weapon_table.cannot_use": "You have not learned how to use this",
-  "text.vampirism.blood_potion_table.cannot_use": "You have not learned how to use this",
-  "__comment": "container/tileentity/screen",
-  "tile.vampirism.blood_grinder": "Blood Grinder",
-  "tile.vampirism.alchemical_cauldron": "Alchemical Cauldron",
-  "tile.vampirism.altar_infusion": "Altar of Infusion",
-  "container.vampirism.hunter_weapon_table.name": "Weapon Table",
-  "container.hunter": "Hunter",
-  "container.hunter_table": "Hunter Table",
-  "container.huntertrainer": "Hunter Trainer",
-  "__comment": "container/tileentity/screen_text",
-  "container.vampirism.hunter_table.ritual_level_wrong": "You cannot use this altar at this level",
-  "container.vampirism.basic_hunter.levelup": "I hope you have learned something",
-  "tile.vampirism.alchemical_cauldron.display": "%s's %s",
-  "text.vampirism.level_up": "Level Up",
-  "text.vampirism.hunter_table.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
-  "text.vampirism.altar_infusion.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
-  "text.vampirism.hunter_trainer.ritual_missing_items": "Missing %s of \"%s\" for this ritual",
 
-  "__comment": "biome",
-  "biome.vampirism.vampire_forest": "Vampire Forest",
   "__comment": "actions",
   "action.vampirism.bat": "Toggle Batmode",
   "action.vampirism.freeze": "Freeze",
@@ -528,12 +500,15 @@
   "block.vampirism.garlic_beacon.tooltip2": "Affects a %s by %s chunk area.",
   "__comment": "commands",
   "command.vampirism.failed_to_execute": "Failed to execute command. Internal error.",
+  "command.vampirism.failed_to_execute.players": "Failed to execute command for %s. Internal error.",
   "command.vampirism.base.reset_balance.success": "Successfully reset %s balance category. Please restart MC.",
   "command.vampirism.base.reset_balance.not_found": "Did not find %s balance category.",
-  "command.vampirism.base.levelup.nofaction": "Player has to be in a faction to be able to level up",
-  "command.vampirism.base.levelup.max": "Player is already on the highest level",
+  "command.vampirism.base.reset_balance.help1": "You can reset Vampirism balance values to the default values. If you have not modified them, this is recommend after every update of Vampirism",
+  "command.vampirism.base.reset_balance.help2": "Use '/vampirism resetBalance all' to reset all categories or specify a category with '/vampirism resetBalance <category>'",
+  "command.vampirism.base.levelup.nofaction": "%s has to be in a faction to be able to level up",
+  "command.vampirism.base.levelup.max": "%s is already on the highest level",
   "command.vampirism.base.levelup.newlevel": "%s is now a %s level %s",
-  "command.vampirism.base.level.cant_leave": "Cannot leave faction %s",
+  "command.vampirism.base.level.cant_leave": "%s cannot leave faction %s",
   "command.vampirism.base.level.successful": "%s is now a %s level %s",
   "command.vampirism.base.glowing_eyes.enabled": "Successfully enabled glowing eyes",
   "command.vampirism.base.glowing_eyes.disabled": "Successfully disabled glowing eyes",
@@ -560,6 +535,21 @@
   "command.vampirism.test.skill.nopoints": "No skill points remaining",
   "command.vampirism.test.skill.othernode": "The other skill is enabled",
   "command.vampirism.test.skill.otherfaction": "Your faction doesn't permit this skill",
+  "command.vampirism.test.skill.noinfaction": "You have to be in a faction",
+  "command.vampirism.test.skill.disabled": "Disabled skill",
+  "command.vampirism.test.tent.success": "Success",
+  "command.vampirism.test.swordtrained.nosword": "You have to hold a vampire sword in your main hand",
+  "command.vampirism.test.swordcharged.nosword": "You have to hold a vampire sword in your main hand",
+  "command.vampirism.test.resetactions": "Reset Timers",
+  "command.vampirism.test.place.notloaded": "Structure %s was not loaded",
+  "command.vampirism.test.place.notfound": "Structure %s not found.",
+  "command.vampirism.test.infoentity.printed": "Printed info to log",
+  "command.vampirism.test.infoentities.count": "Monster: %s (%s), Hunter: %s (%s), Vampire: %s (%s)",
+  "command.vampirism.test.garlicprofiler.tick": "Tick",
+  "command.vampirism.test.garlicprofiler.garlic": "Garlic",
+  "command.vampirism.test.garlicprofiler.print": "%s: %s|%s",
+  "command.vampirism.test.garliccheck.strength": "garlic strength: %s",
+  "command.vampirism.test.entity.notbiteable": "Not biteable %s",
   "command.vampirism.argument.skill.notfound": "The given skill %s does not exist",
   "command.vampirism.argument.action.notfound": "The given action %s does not exist",
   "command.vampirism.argument.faction.notfound": "The given faction %s does not exist",
