fluids finished(except bloodcontainer), vampire_orchid pottable, some stuff

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -114,7 +114,7 @@
   "text.vampirism.med_chair_other_faction": "You cannot become a Hunter since you already are a %s",
   "text.vampirism.already_vampire": "You are already a vampire",
   "text.vampirism.can_only_be_used_with_skill": "This can only be used with skill: %s",
-  "text.vampirism.need_item_to_use": "You need %s to use this",
+  "text.vampirism.need_item_to_use": "You need \"%s\" to use this",
   "text.vampirism.immune_to": "You are immune to",
   "text.vampirism.required_skill": "Required Skill: %s",
   "text.vampirism.from_behind": "From behind.",
@@ -387,7 +387,6 @@
   "block.vampirism.castle_slab_dark_stone": "Dark Stone Slab",
   "__comment": "blocks_old",
   "block.vampirism.tent": "Tent",
-  "block.vampirism.tent.spawner": "Spawns Hunter",
   "block.vampirism.med_chair": "Injection Chair",
   "block.vampirism.alchemical_fire": "Alchemical Fire",
   "block.vampirism.garlic_beacon.already_fueled": "Already fueled",
@@ -420,7 +419,7 @@
   "item.vampirism.blood_bottle": "Blood Bottle",
   "item.vampirism.blood_potion": "Blood Potion",
   "item.vampirism.tech_crossbow_ammo_package": "Arrow clip",
-  "item.vampirism.vampire_book.name": "Vampire Book",
+  "item.vampirism.vampire_book": "Vampire Book",
   "item.vampirism.holy_water_bottle": "Holy Water",
   "item.vampirism.holy_water_splash_bottle": "Splash Bottle of Holy Water",
   "item.vampirism.pure_salt": "Pure Salt",
@@ -446,8 +445,7 @@
   "item.vampirism.vampire_cloak_black_red": "Vampire Cloak",
   "item.vampirism.vampire_cloak_black_blue": "Vampire Cloak",
   "item.vampirism.vampire_cloak_red_black": "Vampire Cloak",
-  "item.vampirism.hunter_hat0_head": "Hunter Hat",
-  "item.vampirism.hunter_hat1_head": "Hunter Hat",
+  "item.vampirism.hunter_hat_head": "Hunter Hat",
   "item.vampirism.heart_seeker": "Heartseeker",
   "item.vampirism.heart_striker": "Heartstriker",
   "item.vampirism.hunter_axe": "Hunter Axe",
@@ -498,6 +496,7 @@
   "block.vampirism.garlic_beacon.weak": "Garlic Diffusor Weak",
   "block.vampirism.garlic_beacon.tooltip1": "Diffuses garlic particles.",
   "block.vampirism.garlic_beacon.tooltip2": "Affects a %s by %s chunk area.",
+  "tile.vampirism.tent.spawner": "Spawns Hunter",
   "__comment": "commands",
   "command.vampirism.failed_to_execute": "Failed to execute command. Internal error.",
   "command.vampirism.failed_to_execute.players": "Failed to execute command for %s. Internal error.",
