--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -252,13 +252,13 @@
   "skill.vampirism.water_resistance": "Water Resistance",
   "skill.vampirism.blood_charge": "Blood Charge",
   "skill.vampirism.sword_finisher": "Finisher",
-  "skill.vampirism.garlic_blood_vision": "Garlic blood vision",
+  "skill.vampirism.blood_vision_garlic": "Garlic blood vision",
   "skill.vampirism.hunter": "Becoming an hunter",
   "skill.vampirism.hunter_attack_speed": "Increased Attack Speed",
   "skill.vampirism.weapon_table": "Hunter Weapon Table",
   "skill.vampirism.double_crossbow": "Double It",
   "skill.vampirism.enhanced_crossbow": "Enhanced Crossbows",
-  "skill.vampirism.hunter_advanced_attack_speed": "Attack swift as the wind",
+  "skill.vampirism.hunter_attack_speed_advanced": "Attack swift as the wind",
   "skill.vampirism.stake1": "How to use a stake",
   "skill.vampirism.stake2": "How to actually use a stake",
   "skill.vampirism.blood_potion_table": "Blood Potion Table",
@@ -364,7 +364,7 @@
   "block.vampirism.castle_stairs_dark_stone": "Dark Stone Stairs",
   "block.vampirism.blood_container": "Blood Container",
   "block.vampirism.cursed_earth": "Cursed Earth",
-  "block.vampirism.vampirism_flower_vampire_orchid": "Vampire Orchid",
+  "block.vampirism.vampire_orchid": "Vampire Orchid",
   "block.vampirism.altar_infusion": "Altar of Infusion",
   "block.vampirism.altar_pillar": "Altar Pillar",
   "block.vampirism.altar_tip": "Altar Tip",
@@ -385,6 +385,7 @@
   "block.vampirism.castle_slab_dark_brick": "Dark Brick Slab",
   "block.vampirism.castle_slab_purple_brick": "Purple Brick Slab",
   "block.vampirism.castle_slab_dark_stone": "Dark Stone Slab",
+  "block.vampirism.coffin": "Coffin",
   "__comment": "blocks_old",
   "block.vampirism.tent": "Tent",
   "block.vampirism.med_chair": "Injection Chair",
@@ -402,7 +403,6 @@
   "item.vampirism.weak_human_heart": "Weak Human Heart",
   "item.vampirism.human_heart": "Human Heart",
   "item.vampirism.vampire_blood_bottle": "Vampire Blood",
-  "item.vampirism.item_coffin": "Coffin",
   "item.vampirism.item_garlic": "Garlic",
   "item.vampirism.item_med_chair": "Injection Chair",
   "item.vampirism.pitchfork": "Pitchfork",
