f76776ac39667805d933903d7cff60de4d5da933

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -59,6 +59,7 @@
   "advancement.vampirism.sniped.dec": "Get sniped while in bat mode",
   "effect.vampirism.sunscreen": "Sunscreen",
   "effect.vampirism.thirst": "Thirst",
+  "effect.vampirism.poison": "Toxicant",
   "effect.vampirism.saturation": "Saturation",
   "effect.vampirism.sanguinare": "Sanguinare Vampiris",
   "effect.vampirism.fire_protection": "Fire Protection",
