Add garlic bread
50570c48ee7b748c59d21e48a236aaaa141ca7c5

--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -463,6 +463,7 @@
   "item.vampirism.hunter_trainer_spawn_egg": "Hunter Trainer Spawn Egg",
   "item.vampirism.blood_bucket": "Blood Bucket",
   "item.vampirism.impure_blood_bucket": "Impure Blood Bucket",
+  "item.vampirism.garlic_bread": "Garlic Bread",
   "__comment": "item_old",
   "item.vampirism.vampires_fear": "Vampire's fear",
   "item.vampirism.torch": "Torch",
