--- a/src/main/resources/assets/vampirism/lang/en_us.json
+++ b/src/main/resources/assets/vampirism/lang/en_us.json
@@ -192,6 +192,7 @@
   "text.vampirism.trainer_disabled": "I am not a hunter",
   "text.vampirism.trainer_disabled_hunter": "It is not safe enought to train you here. Please free the village.",
   "text.vampirism.actions.bind_action": "Bound action %s to action key %s",
+  "text.vampirism.hunter.cured_sanguinare": "You have come to the right person. I have cured you of sanguinare",
   "category.vampirism.balance": "Balance settings",
   "category.vampirism.balance.tooltip": "Change almost any balance relevant property",
   "category.vampirism.balance_general": "General",
@@ -461,6 +462,8 @@
   "item.vampirism.vampire_baron_spawn_egg": "Vampire Baron Spawn Egg",
   "item.vampirism.ghost_spawn_egg": "Ghost Spawn Egg",
   "item.vampirism.hunter_trainer_spawn_egg": "Hunter Trainer Spawn Egg",
+  "item.vampirism.villager_hunter_faction_spawn_egg": "Hunter Faction Villager Spawn Egg",
+  "item.vampirism.villager_vampire_faction_spawn_egg": "Vampire Faction Villager Spawn Egg",
   "item.vampirism.blood_bucket": "Blood Bucket",
   "item.vampirism.impure_blood_bucket": "Impure Blood Bucket",
   "item.vampirism.garlic_bread": "Garlic Bread",
